--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,16 @@
 
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 
-			<dependency>
+		</dependency>
+
+
+
+		<dependency>
 				<groupId>com.cloudinary</groupId>
 				<artifactId>cloudinary-http44</artifactId>
 				<version>1.29.0</version>
