--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
-spring.datasource.username=bloguser
-spring.datasource.password=justGo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
+#spring.datasource.username=bloguser
+#spring.datasource.password=justGo
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#
+#server.port=8087
+#
+#CLOUDINARY_URL=cloudinary://572211816646621:niJoDjJzHkBt_xtUcAEdi3VKEQY@harrykextra
+#CLOUD_NAME=harrykextra
+#API_KEY=572211816646621
+#API_SECRET=niJoDjJzHkBt_xtUcAEdi3VKEQY
 
-server.port=8087
+spring.profiles.active=${PROFILE:dev}
 
-CLOUDINARY_URL=cloudinary://572211816646621:niJoDjJzHkBt_xtUcAEdi3VKEQY@harrykextra
-CLOUD_NAME=harrykextra
-API_KEY=572211816646621
-API_SECRET=niJoDjJzHkBt_xtUcAEdi3VKEQY
+test.datasource.url=jdbc:mysql://localhost:3306/blogdb
+test.datasource.username=bloguser
+test.datasource.password=bloguser
